[package]
name = "arach-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.11.2", features = ["multipart", "json", "stream"] }
serde = { version = "1.0.130", features = ["derive"] }
tokio-util = { version = "0.6.9" }
tokio = {version = "1.13", features = ["fs", "macros", "rt-multi-thread", "test-util"]}

